Add update email endpoint
