# api/openAPI/swagger.yml
@@ -67,31 +67,6 @@ paths:
           description: Missing required parameters
         "403":
           description: Authentication failed
-  /update:
-    post:
-      operationId: controllers.update
-      tags:
-        - User
-      summary: Update a user attribute
-      security: []
-      requestBody:
-        required: true
-        content: 
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                username:
-                  type: string
-      responses:
-        "201": # status code
-          description: Update successful
-        "400":
-          description: Missing required parameters
-        "409":
-          description: User already exists
   /zke_encrypted_key:
     get:
       operationId: controllers.get_ZKE_encrypted_key
@@ -221,6 +196,31 @@ paths:
           description: Unauthorized
         "404":
           description: No secrets found
+  /update/email:
+    put:
+      operationId: controllers.update_email
+      tags:
+        - User
+      summary: Update the user's email
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+      responses:
+        "201": # status code
+          description: email updated
+        "400":
+          description: Missing required parameters
+        "401":
+          description: Unauthorized
+        "403":
+          description: Access denied
+
     
 
 
